2002-07-03 05:14  rcaputo

	* HTTP.pm, README: Prepare for 0.42 release.

2002-07-03 03:55  rcaputo

	* HTTP.pm: No noticeable changes.  Everything I tried was simply
	ineffectual.

2002-07-02 21:33  rcaputo

	* HTTP.pm: Update the User-Agent string slightly to follow
	Mozilla's format.  Adds (rv:$VERSION) to the string.

2002-06-29 06:19  rcaputo

	* SSL.pm: Remove WRITE (which is in Net::SSLeay::Handle) and do
	some other little cleanups.

2002-06-29 06:10  rcaputo

	* HTTP.pm, t/01_request.t: Cosmetic change that may facilitate
	changes later.

2002-06-29 05:50  rcaputo

	* HTTP.pm, MANIFEST, Makefile.PL, SSL.pm, t/01_request.t: Add SSL
	support.  https URLs should now be fetchable, albeit slowly.

2002-06-29 05:49  rcaputo

	* README: Note that the tests require a working internet
	connection.

2002-06-09 18:45  rcaputo

	* Makefile.PL: Fixed the CHANGES generation so that change logs are
	included in tarballs.

2002-06-09 18:45  rcaputo

	* HTTP.pm, t/01_request.t: Applied Ryan Briones' proxying support. 
	Thanks, Ryan!  Added a GET test (with parameters) to ensure that
	GET and POST parameters pass through proxies.

2002-06-09 03:53  rcaputo

	* Makefile.PL: Added a dependency for URI version 1.11.  Newer
	versions of LWP require an interface change that exists in 1.11 but
	not in previous versions.

2002-05-22 04:00  rcaputo

	* HTTP.pm: Apply ekkis' patch to add the request tag to the
	progress callback.

2002-05-19 02:47  rcaputo

	* Makefile.PL: "make dist" fails if it can't find CHANGES (which is
	in the MANIFEST).  Add a little bit of code to ensure CHANGES
	exists before "make dist" can happen.

2002-05-18 17:03  rcaputo

	* CHANGES: Removed CHANGES from the repository since it's now
	generated from CVS's commit log.

2002-05-18 17:02  rcaputo

	* MANIFEST: Added CHANGES.OLD, so people can see old stuff.

2002-05-18 17:02  rcaputo

	* Makefile.PL: Added "make dist" magic to auto-generate ./CHANGES
	with the last year's worth of changes.
